# SDL2Project2017

./: .gitignore  README.md
Games/HanoiTower/src/: Button.c  Disc.c  Draw.c  LNode.c  LTexture.c  Main.c  Mouse.c  constant.h
Projects/: Makefile
Projects/00Sample/src/: main.c
Projects/ImSDL2GUI/: CMakeLists.txt  ImSDL2GUI.sln
Projects/ImSDL2GUI/src/: main.c  mygui.c  mygui.h
Projects/MySample/: SDL2Template.sln  SDL2Template.vcxproj
Projects/MySample/src/: main.c
SDL2Games/: .gitignore  Makefile  README.md
SDL2Games/HanoiTower/: HanoiTower.sln  HanoiTower.vcxproj
SDL2Games/HanoiTower/src/: Event.c  Main.c  Util.c  hanoi.h
SDL2Games/Maze/: Maze.sln  Maze.vcxproj
SDL2Games/Maze/src/: Draw.c  Event.c  Main.c  Map.c  Mouse.c  Pumpkin.c  Texture.c  Util.c  constant.h  maze.h
SDL2Games/Sweep/: Sweep.sln  Sweep.vcxproj
SDL2Games/Sweep/src/: Bomb.c  Draw.c  Event.c  Main.c  Mouse.c  Util.c  miner.h
SDL2Games/Tetris/: Tetris.sln  Tetris.vcxproj
SDL2Games/Tetris/src/: Button.c  Constant.h  Draw.c  Event.c  Main.c  Media.c  Mouse.c  Russia.h  Shape.c  Util.c
SDL2Games/WordHit/: WordHit.sln  WordHit.vcxproj
SDL2Games/WordHit/src/: Bomb.c  Draw.c  Event.c  LTexture.c  Main.c  UFO.c  Util.c  Word.c  hitword.h
Tutorials/: Makefile  README.md  SDL2API.md  SDL2SetupVS2010.pptx  SDL2Tutorials.pptx  imgui.md
Tutorials/01HelloSDL/: HelloSDL.sln  HelloSDL.vcxproj
Tutorials/01HelloSDL/src/: helloSDL.c  main.c
Tutorials/02DrawTTFText/: DrawText.sln  DrawText.vcxproj
Tutorials/02DrawTTFText/src/: drawText.c  main.c  util.c
Tutorials/03HelloSDL-Reform/: CMakeLists.txt  HelloSDL-Reform.sln  HelloSDL-Reform.vcxproj
Tutorials/03HelloSDL-Reform/src/: main.c  utilities.c
Tutorials/04EventMouseKey/: MouseKey.sln  MouseKey.vcxproj
Tutorials/04EventMouseKey/src/: main.c
Tutorials/05DrawGeometry/: CMakeLists.txt  DrawGeometry.sln  DrawGeometry.vcxproj
Tutorials/05DrawGeometry/src/: main.c  util.c
Tutorials/06PlayMixerSound/: CMakeLists.txt  MixSound.sln  MixSound.vcxproj  sdlwav.c
Tutorials/06PlayMixerSound/src/: main.c  util.c  util.h  utilities.h
Tutorials/07ImSDL2GUI/: CMakeLists.txt  ImSDL2GUI.vcxproj
Tutorials/07ImSDL2GUI/src/: main.c  mygui.c  mygui.h
Tutorials/08SpriteAnimation/: Animation.vcxproj  HelloSDL-Reform.vcxproj  Tutorial.sln
Tutorials/08SpriteAnimation/src/: main.c
Tutorials/09Timer/: Timer.sln  Timer.vcxproj
Tutorials/09Timer/src/: main.c
Tutorials/10WindowEvents/: WindowEvents.sln  WindowEvents.vcxproj
Tutorials/10WindowEvents/src/: main.c
Tutorials/11PngImage/: PngImage.sln  PngImage.vcxproj
Tutorials/11PngImage/src/: main.c
