CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(Tutorial)
# SDL directories
MESSAGE(STATUS "operation system is ${CMAKE_SYSTEM}")  
IF (CMAKE_SYSTEM_NAME MATCHES "Linux")  
	MESSAGE(STATUS "current platform: Linux ")  
	INCLUDE(FindPkgConfig)
	PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
	PKG_SEARCH_MODULE(SDL2ttf REQUIRED SDL2_ttf>=2.0.0)
	INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2ttf_INCLUDE_DIRS})
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "Windows")  
	MESSAGE(STATUS "current platform: Windows")  
ELSEIF (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")  
	MESSAGE(STATUS "current platform: FreeBSD")  
ELSE ()  
	MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")  
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")  
# cxx flags
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 -Wall")
SET(CMAKE_C_FLAGS_RELEASE "-O3 -Wall")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -Wall -g")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -Wall -g")
SET(CMAKE_BUILD_TYPE Debug) 
SET(CMAKE_BUILD_TYPE Release) 
# build target
AUX_SOURCE_DIRECTORY(src srcFiles)
GET_FILENAME_COMPONENT(exeName "${CMAKE_SOURCE_DIR}" NAME)
ADD_EXECUTABLE(${exeName} ${srcFiles})
TARGET_LINK_LIBRARIES(${exeName} ${SDL2_LIBRARIES} ${SDL2ttf_LIBRARIES} -lm)

